# backtesting_model

./: .gitignore  README.md  backtesting_model.py  dd.json  format.csv  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: main.yml
backend/: Cargo.toml
data/: Bitcoin-D-Market-Price.json  COINGLASS.json  MVRV less_1Y.json  MVRV less_3M.json  SOPR 1m-3m.json  SOPR 3m-140d.json  STHIP.json  STHRP.json  YCBRP 140d.json  YCBRP 1m.json  YCBRP 3m.json  YCBRP 6m.json
data/Capriole/: btc_avg_heatmap.json  btc_avg_heatmap_ex_perps.json  eth_avg_heatmap.json  eth_avg_heatmap_ex_perps.json
data/ChainExposed/: dormancy_flow.json  iab_mvrv_1m_3m.json  iab_mvrv_3m_140d.json  iab_realized_price_1m_3m.json  iab_spent_output_performance_ratio_1m_3m.json  mayer_multiple.json  (+22 more)
lib/: data_formatter.py  exporter.py  json.py  portfolio.py  properties.py  ratios.py
src/: utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs  types.rs
src-tauri/src/api/data_providers/: mod.rs  yahoo_finance.rs
src-tauri/src/api/io/: data.rs  mod.rs
src-tauri/src/api/market/: crypto.rs  mod.rs
src-tauri/src/api/simulator/: mod.rs
src-tauri/src/data/: mod.rs
src-tauri/src/data/csv/: mod.rs
src-tauri/src/data/simulator/: evaluator.rs  mod.rs  perp_simulator.rs  spot_simulator.rs
src-tauri/src/data/simulator/types/: mod.rs  position.rs  simulation_result.rs  simulation_type.rs  trade.rs
src-tauri/src/data/types/: data_entry.rs  data_point.rs  dataset.rs  mod.rs  time_series.rs
src-tauri/src/old/data_writer/: mod.rs
(+209 files in other folders)
