[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-unminimize", "window-close", "window-unmaximize", "window-show", "window-start-dragging", "window-maximize", "window-hide", "window-minimize", "dialog-all"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
fs = "0.0.5"
scraper = "0.13.0"
rayon = "1.7.0"
csv = "1.3.0"
dateparser = "0.2.1"
chrono = "0.4.31"
anyhow = "1.0.75"
lazy_static = "1.4.0"
native-dialog = "0.7.0"
num-traits = "0.2.18"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
